experimental/ir/testdata/imports/invalid.proto.stderr.txt
error: import path cannot be empty
  --> testdata/imports/invalid.proto:5:8
   |
 5 | import "";
   |        ^^

error: import path must be relative
  --> testdata/imports/invalid.proto:6:8
   |
 6 | import "/root.proto";
   |        ^^^^^^^^^^^^^ this path begins with a `/`

error: imported file does not exist
  --> testdata/imports/invalid.proto:7:1
   |
 7 | import "does_not_exist.proto";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ imported here

encountered 3 errors
